err/pyinq.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyInq-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyinq'...
Listing './lib/python3.5/site-packages/pyinq/asserts'...
Compiling './lib/python3.5/site-packages/pyinq/data.py'...
***   File "./lib/python3.5/site-packages/pyinq/data.py", line 36
    print "\nRUNNING {0}...".format(self)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyinq/parsers'...
Listing './lib/python3.5/site-packages/pyinq/printers'...
Listing './lib/python3.5/site-packages/pyinq/printers/cli'...
Listing './lib/python3.5/site-packages/pyinq/printers/cli/bash'...
Compiling './lib/python3.5/site-packages/pyinq/printers/cli/bash/color.py'...
***   File "./lib/python3.5/site-packages/pyinq/printers/cli/bash/color.py", line 63
    print "{fore}{back}{text}{clear}".format(fore=fore_str,
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyinq/printers/cli/console'...
Compiling './lib/python3.5/site-packages/pyinq/printers/cli/console/console.py'...
***   File "./lib/python3.5/site-packages/pyinq/printers/cli/console/console.py", line 23
    print "\n\n{0}".format(title.upper())
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyinq/printers/cli/default.py'...
***   File "./lib/python3.5/site-packages/pyinq/printers/cli/default.py", line 21
    print "\n\n{0}".format(title.upper())
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyinq/printers/html'...
Compiling './lib/python3.5/site-packages/pyinq/printers/html/printer.py'...
***   File "./lib/python3.5/site-packages/pyinq/printers/html/printer.py", line 73
    print "\nHTML report generated at {0}.".format(self.html.name)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyinq/tags'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
